// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderStyle renders 0 1`] = `
Array [
  .c0 {
  border-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-style: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderStyle renders function 1`] = `
Array [
  .c0 {
  border-style: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-style: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-style: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-style: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderStyle renders invalid theme path 1`] = `
Array [
  .c0 {
  border-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-style: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderStyle renders negative number 1`] = `
Array [
  .c0 {
  border-style: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-style: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-style: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-style: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderStyle renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-style: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-style: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-style: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-style: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-style: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-style: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-style: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-style: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-style: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-style: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-style: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-style: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-style: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-style: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderStyle renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    border-style: July;
  }
}

@media April {
  .c0 {
    border-style: August;
  }
}

@media January {
  .c0 {
    border-style: September;
  }
}

@media April {
  .c0 {
    border-style: November;
  }
}

@media June {
  .c0 {
    border-style: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-style: July;
  }
}

@media April {
  .c0 {
    border-style: August;
  }
}

@media January {
  .c0 {
    border-style: September;
  }
}

@media April {
  .c0 {
    border-style: November;
  }
}

@media June {
  .c0 {
    border-style: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-style: January;
  }
}

@media April {
  .c0 {
    border-style: December;
  }
}

@media January {
  .c0 {
    border-style: April;
  }
}

@media April {
  .c0 {
    border-style: May;
  }
}

@media June {
  .c0 {
    border-style: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-style: January;
  }
}

@media April {
  .c0 {
    border-style: December;
  }
}

@media January {
  .c0 {
    border-style: April;
  }
}

@media April {
  .c0 {
    border-style: May;
  }
}

@media June {
  .c0 {
    border-style: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderStyle renders postitive number 1`] = `
Array [
  .c0 {
  border-style: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-style: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-style: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-style: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderStyle renders string 1`] = `
Array [
  .c0 {
  border-style: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-style: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-style: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-style: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderStyle renders valid theme path 1`] = `
Array [
  .c0 {
  border-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
